--- a/NewPandemic4/appsettings.json
+++ b/NewPandemic4/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "InfestationDbConnection": "Data Source=DESKTOP-V020Q9R;   Initial Catalog=NewPandemic4; Integrated Security=SSPI;",
+    "InfestationDbConnectionNew": "Server=DESKTOP-V020Q9R; Database=NewPandemic4; Trusted_Connection=True;"
+
+  }
+
 }
